# Gallery

./: .env  .eslintrc  .gitignore  LICENSE  README.md  package-lock.json  package.json  workspace.code-workspace
be/: .env  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.gql
be/be/: settings.py  urls.py
be/gallery/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
be/gallery/migrations/: 0001_initial.py  0002_post_description.py  0003_remove_post_rating_post_dislikes_post_likes.py  0004_post_post_image.py  0005_post_post_id.py  0006_remove_post_dislikes_post_dislikes_remove_post_likes_and_more.py  0007_alter_post_dislikes_alter_post_likes.py
be/prisma/: schema.prisma
be/prisma/migrations/20220203201508_init/: migration.sql
be/prisma/migrations/20220203215845_add_date_field/: migration.sql
be/prisma/migrations/20220224072907_add_posts/: migration.sql
be/src/: app.module.ts  main.ts
be/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  gql-auth.guard.ts  jwt-auth.guard.ts  jwt-refresh.strategy.ts  jwt.strategy.ts  local.strategy.ts
be/src/auth/dto/: auth.payload.dto.ts  auth.signup.dto.ts  refresh.dto.ts
be/src/common/: pageinfo.ts  paginated.ts
be/src/posts/: posts.module.ts  posts.resolver.ts  posts.service.ts
be/src/posts/dto/: create-post.input.ts  post.dto.ts  update-post.input.ts
be/src/users/: users.module.ts  users.resolver.ts  users.service.ts
components/: index.ts
db/: docker-compose.yml
fe/: .eslintrc  .prettierrc  README.md  index.html  package-lock.json  package.json  (+2 more)
(+59 files in other folders)
